--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <p class="text-white-50 mb-4">
                         Wira Ardi Kesuma Adji - 171401125 <br>
                         Eukardi Yanto Kristov Waruwu - 171401131 <br>
-                        Yanuar Putra Dairi Tumanggor - 171401xxx
+                        Yanuar Putra Dairi Tumanggor - 171401092
                     </p>
                     <hr class="divider light my-4">
                     <h5 class="text-center text-white">
