remove missing table

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                                             <tr>
                                                 <th scope="col">ID</th>
                                                 <th scope="col">Prority</th>
-                                                <th scope="col">Burst Time</th>
                                                 <th scope="col">Lama Proses</th>
                                                 <th scope="col">Burst-Time</th>
                                                 <th scope="col">Waktu Akses I/0</th>
+                                                <th scope="col">Clock Awal</th>
 
                                             </tr>
                                         </thead>
@@ -272,6 +272,8 @@
         </div>
     </div>
 
+    
+    <!-- Information -->
     <section class="page-section bg-dark">
         <div class="container">
             <div class="row justify-content-center">
